--- a/web/templates/views/testform.html
+++ b/web/templates/views/testform.html
@@ -1,47 +1,47 @@
 <!DOCTYPE html>
 <html lang="ja">
-<header>
-    <meta charset="UTF-8">
-    <title>テスト</title>
-</header>
-<body>
-    <main>
-        <!-- 入力フォーム -->
-        <form action="#" id="form">
-            <select multiple name="test" >
-                <option value="">選択してください</option>
-                <option value="test1">test1</option>
-                <option value="test2">test2</option>
-                <option value="test3">test3</option>
-            </select>
-            <input type="text" name="content[]">
-            <input type="text" name="content[]">
-            <input type="submit" value="送信">
-        </form>
-        <!-- 入力結果を出力 -->
-        <p id="output"></p>
-    </main>
-</body>
-<!-- 以下JavaScriptを記述 -->
-<script>
-    // submit時にイベント実行をする関数
-    document.getElementById('form').onsubmit = function (event) {
-        // 再読み込み防止
-        event.preventDefault();
-        const formData = new FormData(document.getElementById('form'));
-        const data = Object.fromEntries(formData.entries());
-        // それぞれ入力内容を配列に格納
-        const contentArray = formData.getAll('content[]');
-        const selecttArray = formData.getAll('test');
+    <header>
+        <meta charset="UTF-8">
+        <title>テスト</title>
+    </header>
+    <body>
+        <main>
+            <!-- 入力フォーム -->
+            <form action="#" id="form">
+                <select multiple name="test[]" >
+                    <option value="">選択してください</option>
+                    <option value="test1">test1</option>
+                    <option value="test2">test2</option>
+                    <option value="test3">test3</option>
+                </select>
+                <input type="text" name="content[]">
+                <input type="text" name="content[]">
+                <input type="submit" value="送信">
+            </form>
+            <!-- 入力結果を出力 -->
+            <p id="output"></p>
+        </main>
+    </body>
+    <!-- 以下JavaScriptを記述 -->
+    <script>
+        // submit時にイベント実行をする関数
+        document.getElementById('form').onsubmit = function (event) {
+            // 再読み込み防止
+            event.preventDefault();
+            const formData = new FormData(document.getElementById('form'));
+            const data = Object.fromEntries(formData.entries());
+            // それぞれ入力内容を配列に格納
+            const contentArray = formData.getAll('content[]');
+            const selecttArray = formData.getAll('test[]');
 
-        const jsonArray = JSON.stringify(contentArray);
+            const jsonArray = JSON.stringify(contentArray);
 
-        console.log(data, contentArray, jsonArray);
-        // 入力フォームの内容を取得
-        let inputForm = data;
-        console.log(inputForm)
-		// 入力内容を画面に出力
-        document.getElementById('output').textContent = `${inputForm}`;
-    }
-</script>
+            console.log(data, contentArray, jsonArray);
+            // 入力フォームの内容を取得
+            let inputForm = data;
+            console.log(inputForm)
+            // 入力内容を画面に出力
+            document.getElementById('output').textContent = `${inputForm}`;
+        }
+    </script>
 </html>
