--- a/web/templates/views/guilds/linetoken.html
+++ b/web/templates/views/guilds/linetoken.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <header>
+    <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>LINE Botのトークン</title>
-    </header>
+    </head>
     <body>
         <main>
             <!-- 入力フォーム -->
