送信先変更

--- a/web/templates/views/guilds/linetoken.html
+++ b/web/templates/views/guilds/linetoken.html
@@ -8,7 +8,7 @@
     <body>
         <main>
             <!-- 入力フォーム -->
-            <form action="#" id="form">
+            <form action="/guilds/{{ .GuildID }}/linetoken" id="form">
                 <label for="lineNotifyToken">LINE Notifyのトークン</label>
                 <input id="lineNotifyToken" type="password" name="lineNotifyToken">
                 <br/>
