送信周り変更

--- a/web/templates/views/guildid/line_post_discord_channel.html
+++ b/web/templates/views/guildid/line_post_discord_channel.html
@@ -20,6 +20,11 @@
     <script>
         // submit時にイベント実行をする関数
         document.getElementById('form').onsubmit = async function (event) {
+            let check = window.confirm('送信します。よろしいですか？');
+            if (check === false) {
+                event.preventDefault();
+                return;
+            }
             // 再読み込み防止
             event.preventDefault();
             const formData = new FormData(document.getElementById('form'));
@@ -81,6 +86,13 @@
                     'Content-Type': 'application/json'
                 },
                 body: jsonData
+            }).then((res) => {
+                if (res.ok && res.status === 200) {
+                    alert('設定を保存しました');
+                    window.location.href = '/guild/{{ .GuildID }}';
+                } else {
+                    alert('設定の保存に失敗しました');
+                }
             })
 
         }
