フロントにlayout追加

--- a/web/templates/views/guildid/line_post_discord_channel.html
+++ b/web/templates/views/guildid/line_post_discord_channel.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="ja">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>LINEへ送信するDiscordのチャンネル設定</title>
-    </head>
+{{ define "content" }}
     <body>
         <main>
             <!-- 入力フォーム -->
@@ -97,4 +91,4 @@
 
         }
     </script>
-</html>
+{{ end }}
