--- a/web/templates/views/guildid/linetoken.html
+++ b/web/templates/views/guildid/linetoken.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="ja">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>LINE Botのトークン</title>
-    </head>
+{{ define "content" }}
     <body>
         <main>
             <!-- 入力フォーム -->
@@ -81,4 +75,4 @@
 
         }
     </script>
-</html>
+{{ end }}
