--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -12,5 +12,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>{{ .Title }}</title>
     </head>
-    {{template "content" . }}
+    <body>
+        {{template "content" . }}
+    </body>
+    {{ .JsScriptTag }}
 </html>
