エラーメッセージの形式変更

--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -12,7 +12,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>{{ .Title }}</title>
     </head>
-    <body>
+    <body bgcolor="#252525" text="#ffffff">
         {{template "content" . }}
     </body>
     {{ .JsScriptTag }}
