--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,7 +1,7 @@
 {{ define "content" }}
     <main>
         <h1>ようこそ！！！！！！！</h1>
-        ここは{{ .BotName }}の設定とかできるサイトです！！！！！
+        ここは{{ .BotName }}の設定とかできるサイトです！！！！！<br/>
         <a href="/guilds" class="btn btn-primary">サーバ一覧へ</a>
         <a href="/group/{{ .GuildId }}" class="btn btn-primary">Discordチャンネル送信先変更</a>
     </main>
