設定画面の権限チェック変更

--- a/web/templates/views/guildid/line_post_discord_channel.html
+++ b/web/templates/views/guildid/line_post_discord_channel.html
@@ -5,7 +5,7 @@
 
                 {{ .HTMLForm }}
 
-                <input type="submit" value="送信">
+                {{ .SubmitTag }}
             </form>
         </main>
 {{ end }}
