--- a/web/templates/views/guildid/linetoken.html
+++ b/web/templates/views/guildid/linetoken.html
@@ -42,7 +42,7 @@
             <input id="debugMode" type="checkbox" name="debug_mode" value="true">
             <br/>
 
-            <input type="submit" value="送信">
+            {{ .SubmitTag }}
         </form>
     </main>
     <!-- 以下JavaScriptを記述 -->
