ログインコンポーネント対応

--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -28,8 +28,7 @@
                             </button>
                             <!-- ポップバー 上記のbuttonが押されると表示される -->
                             <div id="popover-content" style="display: none;position: absolute;background-color: #fff;border: 1px solid #ccc;padding: 10px; margin: 0 0 0 auto; color: black;">
-                                {{ .LineAccountVer }}
-                                {{ .DiscordAccountVer }}
+                                {{ .AccountVer }}
                             </div>
                         </div>
                     </div>
