デバッグモードのチェック追加

--- a/web/templates/views/guildid/linetoken.html
+++ b/web/templates/views/guildid/linetoken.html
@@ -39,7 +39,7 @@
             <br/>
 
             <label for="debugMode">デバッグモード</label>
-            <input id="debugMode" type="checkbox" name="debug_mode" value="true">
+            <input id="debugMode" type="checkbox" name="debug_mode" value="{{ .LineEntered.LineDebugMode }}">
             <br/>
 
             {{ .SubmitTag }}
