スネークケースからキャメルケースへ変更

--- a/web/templates/views/group/group.html
+++ b/web/templates/views/group/group.html
@@ -3,7 +3,7 @@
         <!-- 入力フォーム -->
         <form action="#" id="form">
             <label for="defaultChannel">Discordに送信するデフォルトのチャンネル</label>
-            <select id="defaultChannel" name="default_channel_id" >
+            <select id="defaultChannel" name="defaultChannelId" >
                 {{ .Channels }}
             </select>
             <br/>
