label名が間違っていたので変更

--- a/web/templates/views/guildid/linetoken.html
+++ b/web/templates/views/guildid/linetoken.html
@@ -19,7 +19,7 @@
             <input id="lineNotifyToken" type="password" name="lineNotifyToken">
             {{ .LineEntered.LineNotifyToken }}
             <br/>
-            <label for="linnNotifyTokenDelete">LINE Notifyのトークン削除</label>
+            <label for="lineNotifyTokenDelete">LINE Notifyのトークン削除</label>
             <input id="lineNotifyTokenDelete" type="checkbox" name="lineNotifyTokenDelete">
             <br/>
 
